[package]
name = "YukiOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rv64", "virt"]
rv64 = []
virt = []

[[bin]]
name = "kernel"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
